--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
 
       <footer>
         <p>Powered by <a href="http://alexis.notmyidea.org/pelican/">Pelican</a></p>
-	<p>&copy; {{ AUTHOR }} 2012</p>
+	<p>&copy; {{ AUTHOR }} {{ COPYRIGHT_DATE }}</p>
       </footer>
 
     </div><!--/.fluid-container-->
