remove spacing below blog name on index

--- a/static/local.css
+++ b/static/local.css
@@ -38,3 +38,5 @@ div.highlight pre {
 .tag-1 {font-size: 1.2em;}
 .tag-2 {font-size: 1.4em;}
 .tag-3 {font-size: 1.6em;}
+
+.page-header {margin: 20px 0 0}
