--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}{{ SITENAME }} <small>[archive]</small>{% endblock %}
 {% block content %}
-{% for year, date_year in dates|groupby( 'date.year' ) %}
+{% for year, date_year in dates|groupby( 'date.year' )|reverse %}
 <h2>{{ year }}</h2>
 {% for month, articles in date_year|groupby( 'date.month' ) %}
 <h3>{{ articles[ 0 ].date.strftime( '%B' ) }}</h3>
