--- a/templates/_tags.html
+++ b/templates/_tags.html
@@ -1,1 +1,1 @@
-Tagged as: {% if article.tags %}{% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> {% endfor %}{% endif %}
+{% if article.tags %}<div class="tags">Tagged as: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> {% endfor %}</div>{% endif %}
