--- a/templates/category.html
+++ b/templates/category.html
@@ -1,2 +1,12 @@
 {% extends "index.html" %}
 {% block title %}{{ SITENAME }} <small>{{ category }}</small>{% endblock %}
+
+{% block feeds %}
+{{ super() }}
+    {% if CATEGORY_FEED_ATOM %}
+    <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_ATOM % category }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} {{ category }} category Atom Feed" />
+    {% endif %}
+    {% if CATEGORY_FEED_RSS %}
+    <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_RSS % category }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} {{ category }} category RSS Feed" />
+    {% endif %}
+{% endblock %}
