--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,2 +1,12 @@
 {% extends "index.html" %}
 {% block title %}{{ SITENAME }} <small>{{ tag }}</small>{% endblock %}
+
+{% block feeds %}
+{{ super() }}
+    {% if TAG_FEED_ATOM %}
+    <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_ATOM % tag }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} {{ tag }} tag Atom Feed" />
+    {% endif %}
+    {% if TAG_FEED_RSS %}
+    <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_RSS % tag }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} {{ tag }} tag RSS Feed" />
+    {% endif %}
+{% endblock %}
