--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
       <hr>
 
       <footer>
-        <p>Powered by <a href="http://alexis.notmyidea.org/pelican/">Pelican</a></p>
+        <p>Powered by <a href="http://blog.getpelican.com/">Pelican</a></p>
 	<p>&copy; {{ AUTHOR }} {{ COPYRIGHT_DATE }}</p>
       </footer>
 
