Google custom search

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,7 @@
 
 	    <div class="span3">
 	      {% include "_sidebar.html" %}
+              {% include "_search.html" %}
             </div><!--/span-->
 
 	  </div>
