--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block windowtitle %}{{ SITENAME }}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1">
     <meta name="description" content="">
     <meta name="author" content="{{ AUTHOR }}">
     {% block feeds %}
