Updates for new pelican and styling clean up

--- a/templates/_tags.html
+++ b/templates/_tags.html
@@ -1,1 +1,1 @@
-{% if article.tags %}<div class="tags">Tagged as: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> {% endfor %}</div>{% endif %}
+{% if article.tags %}<div class="tags"><label>Tags:</label> {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a> {% endfor %}</div>{% endif %}
