--- a/static/local.css
+++ b/static/local.css
@@ -1,58 +1,201 @@
-body { padding-top: 60px; }
-div.article { padding-top: 20px; }
-div.article h2 { padding-bottom: 10px; }
+body {
+    padding-top: 60px;
+}
 
+li p.first {
+    line-height: 20px;
+}
+
+li p {
+    line-height: 26px;
+}
+
+.article {
+    padding-top: 20px;
+}
+
+.article h2 {
+    padding-bottom: 10px;
+}
+.article p img {
+    margin: 1em 0;
+}
 div.highlight pre {
-  background-color: #fefbf3;
-  margin: 0 0 10px;
+    background-color: #fefbf3;
+    margin: 0 0 10px;
 }
 
 .well.small {
-	padding: 6px 6px 4px;
+    padding: 6px 6px 4px;
 }
 
 .btn.xsmall {
-  padding: 1px 3px 1px;
-  font-size: 11px;
+    padding: 1px 3px 1px;
+    font-size: 11px;
 }
 
-.summary * { display: inline; }
-.summary pre { display: none; }
+blockquote {
+    margin: 2em;
+}
+blockquote p {
+    font-size: 1em;
+    line-height: 1.7em;
+    margin-bottom: 1em;
+}
 
-.social a[href*='atom.xml']:before {content: url('./images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='bitbucket.org']:before {content: url('./images/icons/bitbucket.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='delicious.com']:before {content: url('./images/icons/delicious.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='digg.com']:before {content: url('./images/icons/digg.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='facebook.com']:before {content: url('./images/icons/facebook.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='github.com']:before {content: url('./images/icons/github.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='google.com/reader']:before {content: url('./images/icons/reader.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='linkedin.com']:before {content: url('./images/icons/linkedin.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='rss.xml']:before {content: url('./images/icons/rss.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='stackoverflow.com']:before {content: url('./images/icons/stackoverflow.png'); margin-right: 2px; vertical-align: -3px;}
-.social a[href*='twitter.com']:before {content: url('./images/icons/twitter.png'); margin-right: 2px; vertical-align: -3px;}
+/* responsive video element */
+.embed-video {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
 
-.tag-cloud {text-align:justify;}
-.tag-cloud li {display: inline; margin:0.8em; line-height:1.5em;}
+.embed-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16/9 ratio */
+    padding-top: 30px;
+    /* IE6 workaround*/
+    height: 0;
+    overflow: hidden;
+}
 
-.tag-4 {font-size: 1.0em;}
-.tag-3 {font-size: 1.2em;}
-.tag-2 {font-size: 1.4em;}
-.tag-1 {font-size: 1.6em;}
+.embed-video iframe,
+.embed-video object,
+.embed-video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
-.page-header {margin: 20px 0 0}
+.summary * {
+    display: inline;
+}
+
+.summary pre {
+    display: none;
+}
+
+.social a[href*='atom.xml']:before {
+    content: url('./images/icons/rss.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='bitbucket.org']:before {
+    content: url('./images/icons/bitbucket.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='delicious.com']:before {
+    content: url('./images/icons/delicious.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='digg.com']:before {
+    content: url('./images/icons/digg.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='facebook.com']:before {
+    content: url('./images/icons/facebook.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='github.com']:before {
+    content: url('./images/icons/github.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='google.com/reader']:before {
+    content: url('./images/icons/reader.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='linkedin.com']:before {
+    content: url('./images/icons/linkedin.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='rss.xml']:before {
+    content: url('./images/icons/rss.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='stackoverflow.com']:before {
+    content: url('./images/icons/stackoverflow.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.social a[href*='twitter.com']:before {
+    content: url('./images/icons/twitter.png');
+    margin-right: 2px;
+    vertical-align: -3px;
+}
+
+.tag-cloud {
+    text-align: justify;
+}
+
+.tag-cloud li {
+    display: inline;
+    margin: 0.8em;
+    line-height: 1.5em;
+}
+
+.tag-4 {
+    font-size: 1.0em;
+}
+
+.tag-3 {
+    font-size: 1.2em;
+}
+
+.tag-2 {
+    font-size: 1.4em;
+}
+
+.tag-1 {
+    font-size: 1.6em;
+}
+
+.page-header {
+    margin: 20px 0 0
+}
 
 body {
     font-size: 1.2em;
     line-height: 1.6em;
 }
-.article li {
+
+.article li, .article pre {
     line-height: 1.6em;
-}
-.well, .nav-header {
-    font-size: 0.8em;
+    margin-bottom: 1em;
 }
 
-.navbar .nav, .navbar-text {
+.well,
+.nav-header {
+    font-size: 0.8em;
+}
+.sidebar-nav {
+    overflow-wrap: break-word;
+}
+.sidebar-nav>.nav.nav-list.social>.nav-header {
+    margin-top: 20px;
+}
+
+.navbar .nav,
+.navbar-text {
     padding-top: 5px;
 }
 
@@ -62,48 +205,119 @@ h1 {
 
 h2 {
     font-size: 1.5em;
+    margin-top: 1em;
 }
 
 h3 {
     font-size: 1.3em;
 }
+
 .small {
     font-size: 0.8em;
 }
+
 .tags {
-    font-size: 0.8em;
+    font-size: 1em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    font-weight: bold;
+}
+.tags label {
+    display: inline;
+    font-size: 1em;
 }
 
-a { 
+a {
     color: rgb(23, 135, 190);
 }
 
-footer, .about {
+footer,
+.about {
     font-size: 0.9em;
 }
 
 .pagination {
     text-align: center;
+    margin-top: 4em;
+}
+
+.align-center,
+.centered {
+    text-align: center;
+}
+
+.align-left {
+    text-align: left;
+}
+
+.align-right {
+    text-align: right;
 }
 
 .search {
     font-size: 14px;
     line-height: 20px;
+    margin-bottom: 43px;
 }
 
-.author {
-    margin-top: 110px;
+
+.docutils.literal {
+    font-size: 18px;
 }
+
+.search .gsc-control-cse {
+    padding: 0;
+}
+
+.search .gsc-search-box-tools .gsc-search-box .gsc-input {
+    padding-right: 2px;
+}
+
+.thumbnail {
+    margin: 2em 1em;
+}
+
+.gsc-search-button.gsc-search-button-v2 {
+    line-height: 1px;
+    padding: 7px 20px;
+}
+
+.archive__month {
+    margin-left: 20px;
+}
+
+.archive__month__articles li {
+    margin-left: 40px;
+    margin-bottom: 1em;
+}
+
+p {
+    margin-bottom: 1em;
+}
+
 /* fix up nav on mobile */
+
 @media (max-width: 767px) {
-    .navbar-fixed-top, .navbar-fixed-bottom {
+    .navbar-fixed-top,
+    .navbar-fixed-bottom {
         margin-right: 0px;
         margin-left: 0px;
     }
 }
+
 @media (max-width: 979px) {
     /* remove extra top space at small sizes */
     .navbar-fixed-top {
         position: absolute;
+    }
+}
+
+
+/* limit width on very large screens */
+@media (min-width: 1400px) {
+    body > .container-fluid {
+        width: 1370px !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
     }
 }
