--- a/templates/archives.html
+++ b/templates/archives.html
@@ -4,11 +4,11 @@
 {% for year, date_year in dates|groupby( 'date.year' )|reverse %}
 <h2>{{ year }}</h2>
 {% for month, articles in date_year|groupby( 'date.month' ) %}
-<h3>{{ articles[ 0 ].date.strftime( '%B' ) }}</h3>
-<ul>
-{% for article in articles %}
+<h3 class="archive__month">{{ articles[ 0 ].date.strftime( '%B' ) }}</h3>
+<ul class="archive__month__articles unstyled">
+	{% for article in articles %}
 	<li><a href="{{ article.url }}">{{ article.title }}</a></li>
-{% endfor %}
+	{% endfor %}
 </ul>
 {% endfor %}
 {% endfor %}
