--- a/templates/article.html
+++ b/templates/article.html
@@ -5,17 +5,26 @@
   <div class="page-header"><h1>{{ article.title }}</h1></div>
   <div class="well small">{% include "metadata.html" %}</div>
   <div>{{ article.content }}</div>
-  {% if DISQUS_SITENAME or FACEBOOK_APPID %}
+  {% include "_tags.html" %}
+  {% if DISQUS_SITENAME %}
   <div>
     <h2>Comments</h2>
-    {% include "twitter.html" %}
-    {% if DISQUS_SITENAME %}
-    <div id="disqus_thread"></div>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    {% endif %}
-    {% if FACEBOOK_APPID %}<div class="fb-comments" data-href="{{ FQ_SITEURL }}/{{ article.url }}" data-num-posts="10" data-width="760"></div>{% endif %}
+    <div>
+      <div id="disqus_thread"></div>
+    </div>
+    <script type="text/javascript">
+      var disqus_shortname = '{{ DISQUS_SITENAME }}';
+      var disqus_identifier = '{{ article.url }}';
+      var disqus_url = '{{ SITEURL }}/{{ article.url }}';
+      (function () {
+        var dsq = document.createElement('script');
+        dsq.type = 'text/javascript';
+        dsq.async = true;
+        dsq.src = '//{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
+    </script>
   </div>
   {% endif %}
-</div>	
+</div>
 {% endblock %}
